fix(search): make sure to set overflow-y

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -125,6 +125,7 @@
 
         & > #results-container {
           flex-basis: 30%;
+          overflow-y: auto;
 
           & .result-card {
             padding: 1em;
